Replace SolutionRow with Term[] wherever possible, saving one allocation and one indirection per row processed.